--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jest": "^27.0.4",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2"
   }
 }
